--- a/client/src/app/modules/tiers/components/tiers-main/tiers-main.component.html
+++ b/client/src/app/modules/tiers/components/tiers-main/tiers-main.component.html
@@ -19,6 +19,14 @@
                 [conditionnalRequired]="!tiers.isIndividual" [maxLength]="80">
               </generic-input>
             </td>
+            <td>
+              <generic-input [(model)]="tiers.siret" label="SIRET" [form]="principalForm" propertyName="siret"
+                [isDisabled]="false"></generic-input>
+            </td>
+            <td>
+              <generic-toggle [(model)]="tiers.isNewTiers" label="Nouveau client ?" [form]="principalForm"
+                propertyName="isNewTiers" [isDisabled]="!editMode"></generic-toggle>
+            </td>
           </tr>
         </table>
         <table class="full-width">
