--- a/src/main/resources/mails/templates/waiting-quotation-validation.html
+++ b/src/main/resources/mails/templates/waiting-quotation-validation.html
@@ -146,7 +146,7 @@
                                                                 style="padding-left:10px;padding-right:10px;text-align:center;width:100%;">
                                                                 <h1
                                                                     style="margin: 0; white-space: nowrap;color: rgb(35, 61, 86); direction: ltr; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 20px; font-weight: 700; letter-spacing: normal; line-height: 24px; text-align: center; margin-top: 0; margin-bottom: 0;">
-                                                                    <strong><span>Ce devis n'attends que votre
+                                                                    <strong><span>Ce devis n'attend que votre
                                                                             validation</span></strong>
                                                                 </h1>
                                                             </td>
