--- a/src/main/resources/mails/templates/send-rff.html
+++ b/src/main/resources/mails/templates/send-rff.html
@@ -255,7 +255,7 @@
                                                             <td
                                                                 style="padding-left:10px;padding-right:10px;width:100%;padding-right: 10px">
                                                                 <p>Cette facture doit obligatoirement être datée de
-                                                                    <span th:text="${rffMonth}"></span></span>.
+                                                                    <span th:text="${rffYear}"></span></span>.
                                                                 </p>
                                                             </td>
                                                         </tr>
