--- a/src/main/resources/mails/templates/send-rff.html
+++ b/src/main/resources/mails/templates/send-rff.html
@@ -195,7 +195,7 @@
                                                                     vous remercions de nous faire parvenir avant la fin
                                                                     de l’année, une facture avec les montants ci-dessous
                                                                     correspondant à l’année <span
-                                                                        th:text="${rffYear}"></span></span>.</p>
+                                                                        th:text="${rffYear}"></span>.</p>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -255,7 +255,7 @@
                                                             <td
                                                                 style="padding-left:10px;padding-right:10px;width:100%;padding-right: 10px">
                                                                 <p>Cette facture doit obligatoirement être datée de
-                                                                    <span th:text="${rffYear}"></span></span>.
+                                                                    <span th:text="${rffYear}"></span>.
                                                                 </p>
                                                             </td>
                                                         </tr>
