--- a/src/main/resources/mails/templates/invoice-page.html
+++ b/src/main/resources/mails/templates/invoice-page.html
@@ -311,7 +311,8 @@
         Article
         L441-6)<br />
         TVA acquittée sur les débits</p>
-    <p style="font-size: 12px;">Les règlements par chèque ne sont pas acceptés</p>
+    <p style="font-size: 12px;">Les règlements par chèque ne sont plus acceptés et peuvent se faire par carte bleue ou
+        virement</p>
     <div class="page-break">
         <table>
             <tr>
