--- a/client/src/app/modules/invoicing/components/invoice-details/invoice-details.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-details/invoice-details.component.html
@@ -190,8 +190,8 @@
           <ng-container *ngFor="let invoiceItem of invoice.invoiceItems;let indexInvoiceItem = index">
             <tr class="mat-mdc-row mdc-data-table__row ">
               <td class="mat-mdc-cell mdc-data-table__cell ">
-                {{invoiceItem.label}} <mat-icon *ngIf="invoiceItem && invoice.provider" color="accent"
-                  matTooltip="Montant à refacturer" color="accent" class="pointer"
+                {{invoiceItem.label}} <mat-icon *ngIf="invoiceItem && invoice.provider && canEditAmountInvoice()"
+                  color="accent" matTooltip="Modifier le montant à refacturer" color="accent" class="pointer"
                   (click)="openEditAmountDialog(invoiceItem)">edit
                 </mat-icon>
               </td>
