--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -251,7 +251,8 @@
             [updateDocumentsEvent]="updateDocumentsEvent.asObservable()"></quotation-management>
         </mat-tab>
         <mat-tab label="Documents" *ngIf="quotation.id!=null && quotation.id!=undefined">
-          <attachments [entity]="quotation" [editMode]="editMode" [entityType]="getEntityType().entityType">
+          <attachments [entity]="quotation" [editMode]="editMode" [quotationStatus]="quotation.quotationStatus.code"
+            [entityType]="getEntityType().entityType">
           </attachments>
         </mat-tab>
         <mat-tab label="Pièces manquantes" *ngIf="quotation && instanceOfCustomerOrderFn(quotation) && hasOnePm()">
