hide upload button with editMode

--- a/client/src/app/modules/miscellaneous/components/attachments/attachments.component.html
+++ b/client/src/app/modules/miscellaneous/components/attachments/attachments.component.html
@@ -8,7 +8,8 @@
         matTooltip="Télécharger toutes les fichiers">
         <mat-icon>download</mat-icon>
       </button>
-      <button (click)="uploadFile()" mat-mini-fab color="warn" class="mini-fab-add" matTooltip="Uploader le fichier">
+      <button (click)="uploadFile()" *ngIf="editMode" mat-mini-fab color="warn" class="mini-fab-add"
+        matTooltip="Uploader le fichier">
         <mat-icon>add</mat-icon>
       </button>
     </div>
