set editMode = true to allow adding files with <attachments> tag in others components

--- a/client/src/app/modules/administration/components/competent-authority/competent-authority.component.html
+++ b/client/src/app/modules/administration/components/competent-authority/competent-authority.component.html
@@ -257,7 +257,7 @@
           <receipt-reconciliation [provider]="selectedcompetentAuthority"></receipt-reconciliation>
         </mat-tab>
         <mat-tab label=" Documents" *ngIf="selectedcompetentAuthority.id">
-          <attachments [entity]="selectedcompetentAuthority" [editMode]="editMode"
+          <attachments [entity]="selectedcompetentAuthority" [editMode]="true"
             [entityType]="COMPETENT_AUTHORITY_ENTITY_TYPE.entityType">
           </attachments>
         </mat-tab>
