--- a/client/src/app/modules/administration/components/provider/provider.component.html
+++ b/client/src/app/modules/administration/components/provider/provider.component.html
@@ -163,7 +163,7 @@
       </ng-template>
     </mat-tab>
     <mat-tab label="Documents" *ngIf="selectedProvider.id">
-      <attachments [entity]="selectedProvider" [editMode]="editMode" [entityType]="PROVIDER_ENTITY_TYPE.entityType">
+      <attachments [entity]="selectedProvider" [editMode]="true" [entityType]="PROVIDER_ENTITY_TYPE.entityType">
       </attachments>
     </mat-tab>
   </mat-tab-group>
